kubernetes/project1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project1
  namespace: robert-moody
  labels:
    app: project1
spec:
  selector:
    matchLabels:
      app: project1
  replicas: 1
  template:
    # Describes the Pods that will be produced by this Deployment
    # This is a nested manifest for a Pod
    # Nested manifests do not need to include a kind or an apiVersion
    # But they do include metadata and spec
    metadata:
      labels:
        app: project1
    spec:
      volumes:
      - name: config
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        ports:
        - containerPort: 24224
        image: grafana/fluent-plugin-loki:latest
        imagePullPolicy: IfNotPresent # Optional, since this is already the default value
        # livenessProbe: # Perhaps with more research we could identify a URL to use for these probes
        # readinessProbe:
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          # mountPath is the path inside the container that we will mount to
          # the destination
          subPath: fluent.conf
          # subPath is the path inside the volume that we are mounting from
          # the source
      - name: project1
        image: rmoody/project1:0.0.1-SNAPSHOT
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent # Optional, since this is already the default value
