kubernetes/project1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project1
spec:
  selector:
    app: project1
  ports: 
  - name: http
    protocol: TCP
    port: 8080  
    targetPort: 8080
  type: ClusterIP
